# jogaYjoga

./: .env.example  .gitignore  COMO_RODAR.md  CONTEXTO_PROJETO.md  DECISOES_ARQUITETURA.md  DEPLOY_OPCOES.md  Quadras.csv  README.md  jogaYjoga contexto.docx  main.py  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/backend/: main.py  security.py
app/backend/api/: __init__.py  deps.py
app/backend/core/: __init__.py  config.py  exceptions.py  logging.py
app/backend/domain/: __init__.py
app/backend/integrations/: __init__.py  groq.py
app/backend/repositories/: __init__.py  reservations.py  users.py  venues.py
app/backend/routes/: chat.py  rag_chat.py
app/backend/services/: __init__.py  embedding_service.py  groq_service.py  rag_service.py
app/backend/utils/: __init__.py  logger.py
app/chatbot/: __init__.py  engine.py
app/core/: config.py
app/data/: Quadras.csv  geocode_quadras.py  seed.py
app/database/: handler.py  session.py
app/frontend/: streamlit_app.py
app/frontend/src/: __init__.py
app/models/: entities.py
app/schemas/: api.py
backend/: __init__.py  app.py  database.py  models.py  requirements.txt  seed.py
backend/app/: __init__.py  main.py
deploy/: Quadras.py  app.py  requirements.txt
deploy/.streamlit/: config.toml
deploy/pages/: 1_Perfil.py
docs/: SR2_RELATORIO_PROCESSO.md  database-er.md
frontend/: Quadras.py  app.py  requirements.txt
frontend/pages/: 1_Perfil.py
tests/: test_chatbot_engine.py  test_groq_service.py
(+18 files in other folders)
