[project]
name = "jogayjoga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "groq>=0.31.0",
    "gunicorn>=26.0.0",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "uvicorn>=0.38.0",
]
